add a way to control which JDK the TC tools are going to use + the JAVA_OPTS env variable